--- a/src/components/modal/input/input.module.css
+++ b/src/components/modal/input/input.module.css
@@ -1,5 +1,12 @@
 .wrapper {
+    position: relative;
     margin-bottom: 35px;
+}
+.hide_show {
+    position: absolute;
+    top: 8px;
+    right: 15px;
+    cursor: pointer;
 }
 .input {
     padding: 10px 13px;
@@ -18,6 +25,7 @@
     background: rgba(162, 162, 162, 0.1);
     border: 1px solid rgba(162, 162, 162, 0.6);
     border-radius: 5px;
+    user-select: none;
 
     transition: 0.2s linear;
 }
