--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -37,7 +37,7 @@
 
     border: 1px dashed rgba(162, 162, 162, 0.6);
     box-sizing: border-box;
-    box-shadow: 0px 0px 20px 12px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 20px 12px rgba(0, 0, 0, 0.3);
     border-radius: 5px;
     background: white;
 }
@@ -94,6 +94,13 @@
     top: -10px;
     animation: Morty 3s forwards;
 }
+.rick_green {
+    position: absolute;
+    z-index: -1;
+    left: -270px;
+    top: 10px;
+    animation: RickGreen 3s forwards;
+}
 @keyframes Morty {
     0% {
         transform: translate(-100px, 120px);
@@ -103,6 +110,14 @@
     }
 }
 
+@keyframes RickGreen {
+    0% {
+        transform: translate(100px, 0);
+    }
+    100% {
+        transform: translate(0, 0);
+    }
+}
 @keyframes Rick {
     0% {
         transform: translateY(160px);
