--- a/src/pages/home/characters/card/grid/grid.module.css
+++ b/src/pages/home/characters/card/grid/grid.module.css
@@ -38,11 +38,15 @@
     border-radius: 50%;
     border: 1px solid rgba(162, 162, 162, 0.6);
 
+    opacity: 0;
     transition: 0.2s linear;
     cursor: pointer;
 }
 .favorites:hover {
     background: #008BDA;
+}
+.card:hover .favorites {
+    opacity: 1;
 }
 
 .save {
