--- a/src/pages/favorites/buttons/button.module.css
+++ b/src/pages/favorites/buttons/button.module.css
@@ -19,7 +19,6 @@
     width: 430px;
     height: 97px;
     transform: translate(-5px, -5px);
-    border: 1px solid rgba(162, 162, 162, 0.6);
     filter: drop-shadow(8px 8px 4px rgba(0, 0, 0, 0.4));
 }
 .button:hover .title {
@@ -32,6 +31,7 @@
     align-items: center;
     height: 100%;
     background: rgba(0,0,0, 0.3);
+    border-radius: 5px;
 }
 .title {
     display: inline-block;
