--- a/src/pages/favorites/buttons/button.module.css
+++ b/src/pages/favorites/buttons/button.module.css
@@ -1,19 +1,18 @@
 .button {
+    position: relative;
     width: 270px;
     height: 54px;
-    background-size: cover;
     border: 2px solid #00A3FF;
     border-radius: 5px;
     transition: 0.3s linear;
 }
-.button:nth-child(1) {
-    background-image: url("../../../assets/img/loc_min.png");
-}
-.button:nth-child(2) {
-    background-image: url("../../../assets/img/char_min.png");
-}
-.button:nth-child(3) {
-    background-image: url("../../../assets/img/epi_min.png");
+.button > img {
+    position: absolute;
+
+    height: 100%;
+    width: 100%;
+
+    z-index: -1;
 }
 .button:hover {
     width: 430px;
