--- a/src/components/title/title.module.css
+++ b/src/components/title/title.module.css
@@ -41,5 +41,15 @@
     filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.4));
 }
 .name {
+    display: inline;
+
     margin-left: 417px;
+
+    font-family: 'Montserrat-Bold', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 29px;
+
+    color: #000000;
 }
