--- a/src/components/select/select.module.css
+++ b/src/components/select/select.module.css
@@ -48,6 +48,7 @@
     position: absolute;
     top: 50px;
     right: 0;
+    z-index: -10;
 
     font-family: 'Montserrat-Medium', sans-serif;
     font-style: normal;
@@ -60,7 +61,7 @@
     list-style-position: inside;
     background: #F7F7F7;
     border: 1px solid rgba(0, 0, 0, 0.15);
-    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
     color: #000000;
     transition: 0.2s linear;
